[tool.poetry]
name = "marchat.herokuapp.com"
version = "0.1.0"
description = ""
authors = ["Martin Tang <martin.tang365@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^19.12.2"
python-socketio = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
